changelog: prep 5.0.0 release